--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -23,6 +23,7 @@ html {
 @media only screen and (min-width: 642px) and (max-width: 1090px) {
 
   #dolphin {
-    
+    top: 200px;
+    rotation: 360deg;
   }
 }
