--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -24,6 +24,8 @@ html {
 
   #dolphin {
     top: 0;
+    -ms-transform: rotate(20deg); /* IE 9 */
+    -webkit-transform: rotate(20deg); /* Safari */
     transform: rotate(20deg);
   }
 }
